[gd_scene load_steps=28 format=2]

[ext_resource path="res://playerSprites/male.png" type="Texture" id=1]
[ext_resource path="res://playerSprites/1911igwpPluschar.png" type="Texture" id=2]
[ext_resource path="res://playerSprites/mac10igwpPlusChar.png" type="Texture" id=3]
[ext_resource path="res://playerSprites/lactionigwpPlusChar.png" type="Texture" id=4]
[ext_resource path="res://playerSprites/glauncherigwpPlusChar.png" type="Texture" id=5]
[ext_resource path="res://playerSprites/bandageigwpPlusChar.png" type="Texture" id=6]
[ext_resource path="res://playerSprites/doublebigwpPlusChar.png" type="Texture" id=7]
[ext_resource path="res://bot.gd" type="Script" id=8]
[ext_resource path="res://label3d.gd" type="Script" id=9]
[ext_resource path="res://hud.tres" type="DynamicFont" id=10]
[ext_resource path="res://worm final.png" type="Texture" id=11]
[ext_resource path="res://nelevenSprite2.tres" type="Texture" id=12]

[sub_resource type="SpatialMaterial" id=12]
resource_local_to_scene = true
render_priority = -1
flags_transparent = true
flags_no_depth_test = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 1 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 12 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 7 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 3 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 4 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 5 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 6 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = ExtResource( 11 )
rim_enabled = true
rim = 1.0
rim_tint = 1.0

[sub_resource type="CapsuleShape" id=8]
radius = 0.7
height = 3.0

[sub_resource type="Animation" id=10]
resource_name = "runPistol"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:animframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=11]
resource_name = "runRifle"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:animframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("nameSprite/label3d")

[sub_resource type="ParticlesMaterial" id=15]
direction = Vector3( 0, 1, 0 )
spread = 120.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="QuadMesh" id=17]
material = SubResource( 16 )
size = Vector2( 0.1, 0.1 )

[node name="bot" type="KinematicBody" groups=["player"]]
collision_layer = 9
collision_mask = 9
script = ExtResource( 8 )
animframe = 1

[node name="compositeSprites" type="Spatial" parent="."]

[node name="maleSprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
visible = false
material_override = SubResource( 12 )
billboard = 2
shaded = true
texture = ExtResource( 1 )
hframes = 15
vframes = 5

[node name="nelevenSprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
material_override = SubResource( 13 )
billboard = 2
shaded = true
texture = ExtResource( 2 )
hframes = 15
vframes = 5

[node name="doublebSprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
visible = false
material_override = SubResource( 3 )
billboard = 2
shaded = true
texture = ExtResource( 7 )
hframes = 15
vframes = 5

[node name="mac10Sprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
visible = false
material_override = SubResource( 4 )
billboard = 2
shaded = true
texture = ExtResource( 3 )
hframes = 15
vframes = 5

[node name="lactionSprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
visible = false
material_override = SubResource( 5 )
billboard = 2
shaded = true
texture = ExtResource( 4 )
hframes = 15
vframes = 5

[node name="glauncherSprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
visible = false
material_override = SubResource( 6 )
texture = ExtResource( 5 )
hframes = 15
vframes = 5

[node name="bandageSprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
visible = false
material_override = SubResource( 7 )
texture = ExtResource( 6 )
hframes = 15
vframes = 5

[node name="deadSprite" type="Sprite3D" parent="compositeSprites"]
transform = Transform( 3.5, 0, 0, 0, 3.5, 0, 0, 0, 1, 0, -0.018142, 0 )
visible = false
material_override = SubResource( 14 )
billboard = 2
shaded = true
texture = ExtResource( 11 )
hframes = 13
vframes = 5
frame = 51

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 8 )

[node name="animSprite" type="AnimationPlayer" parent="."]
anims/runPistol = SubResource( 10 )
anims/runRifle = SubResource( 11 )

[node name="nameSprite" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32087, 0 )
billboard = 1
texture = SubResource( 9 )

[node name="label3d" type="Viewport" parent="nameSprite"]
size = Vector2( 75, 26 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 9 )

[node name="Label" type="Label" parent="nameSprite/label3d"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 10 )
text = "junin"

[node name="aim" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.37601, 0 )
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 3

[node name="lookAt" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40309, 0 )

[node name="gunSound" type="AudioStreamPlayer3D" parent="."]
unit_size = 20.0

[node name="ammoAudio" type="AudioStreamPlayer" parent="."]

[node name="death" type="Timer" parent="."]

[node name="deathParticles" type="Particles" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
visibility_aabb = AABB( -0.725982, -0.631749, -2.97335, 1.45196, 1.2635, 5.9467 )
process_material = SubResource( 15 )
draw_pass_1 = SubResource( 17 )

[connection signal="timeout" from="death" to="." method="_on_death_timeout"]
